Update demo page to highlight save and load functionality

--- a/js/PianoRollLib/test.html
+++ b/js/PianoRollLib/test.html
@@ -6,9 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="pianoRoll.css">
+    <link rel="stylesheet" href="test.css">
 </head>
 <body>
-    <div id="roll1" style="width: 900px">
+    <p>
+        The piano roll can save and load beats from the user's clipboard. 
+        Users can then share beats with one another with a simple text string. 
+        This functionality is also used for loading levels in the game.
+    </p>
+    <p>
+        Try the following beats by copying them to the clipboard then clicking "Load": <br>
+        qqoICICA <br>
+        qpoAIJIG <br>
+        /j8ICINC <br>
+
+    </p>
+    <div id="roll1" style="width: 900px; margin: auto;">
 
     </div>
 </body>
