--- a/js/PianoRollLib/test.html
+++ b/js/PianoRollLib/test.html
@@ -9,6 +9,7 @@
     <script src="https://unpkg.com/wavesurfer.js"></script>
 
     <link rel="stylesheet" href="pianoRoll.css">
+    <link rel="stylesheet" href="beatGame.css">
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
@@ -27,6 +28,20 @@
     <div id="roll1" style="width: 900px; margin: auto;">
 
     </div>
+    
+    <br>
+    <br>
+    <br>
+
+    <p>
+        Below is the first level of the beat reconstruction game. 
+        Use the waveform and the "Listen" button to reconstruct the beat.
+        Hit "Submit" when you want to check your answer.
+    </p>
+
+    <div id="wavesurf" style="width: 800px;"></div>
+
+    <div id="roll2" style="width: 900px; margin: auto;"></div>
 </body>
 <script type="module" src="test.js"></script>
 </html>
