--- a/js/MusicPlayer/player.html
+++ b/js/MusicPlayer/player.html
@@ -25,10 +25,6 @@
       <div id="container">
         <div id="boo"></div>
       </div>
-      <div id="controls">
-        <button id='add-note'>Add Note</button>
-        <button id='right-answer'>Right Answer</button>
-      </div>
       <div class="track-name">Track Name</div>
       <div class="track-artist">Track Artist</div>
     </div>
@@ -50,7 +46,7 @@
     <div class="slider_container">
       <div class="current-time">00:00</div>
       <input type="range" min="1" max="100"
-        value="0" class="seek_slider" onchange="seekTo()">
+        value="0" class="seek_slider">
       <div class="total-duration">00:00</div>
     </div>
   
