added dynamic waveform visualizer

--- a/js/PianoRollLib/test.html
+++ b/js/PianoRollLib/test.html
@@ -32,14 +32,14 @@
     <br>
     <br>
     <br>
+    
+    <div id="wavesurf" class="wavesurfContainer" style="width: 800px;"></div>
 
     <p>
         Below is the first level of the beat reconstruction game. 
         Use the waveform and the "Listen" button to reconstruct the beat.
         Hit "Submit" when you want to check your answer.
     </p>
-
-    <div id="wavesurf" style="width: 800px;"></div>
 
     <div id="roll2" style="width: 900px; margin: auto;"></div>
 </body>
