Add melodic piano roll

--- a/js/PianoRollLib/test.html
+++ b/js/PianoRollLib/test.html
@@ -42,6 +42,17 @@
     <div id="wavesurf" style="width: 800px;"></div>
 
     <div id="roll2" style="width: 900px; margin: auto;"></div>
+
+    <br>
+    <br>
+    <br>
+
+    <p>
+        Below is the first melodic level of the beat reconstruction game. 
+    </p>
+
+    <div id="roll3" style="width: 900px; margin: auto;"></div>
+
 </body>
 <script type="module" src="test.js"></script>
 </html>
