--- a/js/MusicPlayer/twinkleplayer.html
+++ b/js/MusicPlayer/twinkleplayer.html
@@ -10,36 +10,49 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   
   <!-- Load the custom CSS style file -->
   <link rel="stylesheet" type="text/css" href="player.css">
   <link rel="stylesheet" type="text/css" href="notes.css">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Music Player</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Twinkle Twinkle Little Star <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="birthdayplayer.html">Happy Birthday</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <div class="player">
   
     <!-- Define the section for displaying details -->
     <div class="details">
-      <div class="now-playing">PLAYING x OF y</div>
       <div class="track-art"></div>
       <div id="container">
         <div id="boo"></div>
       </div>
-      <div class="track-name">Track Name</div>
-      <div class="track-artist">Track Artist</div>
+      <div class="track-name">Twinkle Twinkle Little Star</div>
+      <div class="track-artist">Jane Taylor</div>
     </div>
   
     <!-- Define the section for displaying track buttons -->
     <div class="buttons">
-      <div class="prev-track" onclick="prevTrack()">
-        <i class="fa fa-step-backward fa-2x"></i>
-      </div>
+      
       <div id="play-pause-button" class="playpause-track" onclick="playpauseTrack()">
         <i class="fa fa-play-circle fa-5x"></i>
       </div>
-      <div class="next-track" onclick="nextTrack()">
-        <i class="fa fa-step-forward fa-2x"></i>
-      </div>
+      
     </div>
   
     <!-- Define the section for displaying the seek slider-->
@@ -64,7 +77,7 @@
   <script src="https://unpkg.com/vexflow@4.0.0/build/vexflow-debug.js" crossorigin></script>
 
   <script src = "https://d3js.org/d3.v4.min.js"></script> 
-  <script src="notes.js"></script>
+  <script src="twinklenotes.js"></script>
   <script src="player.js"></script>
   
 </body>
