Melodic Contour Game Updates

--- a/js/PianoRollLib/contourTest.html
+++ b/js/PianoRollLib/contourTest.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="contourTest.css">
 </head>
 <body>
+    <p>
+        This is going be the piano roll that is displayed at the beginning for the pattern and then hidden
+    </p>
     <div id="roll1" style="width: 900px">
+
+    </div>
+    <p>
+       This is the piano roll where the game will be played
+    </p>
+    <div id="roll2" style="width: 900px">
 
     </div>
 </body>
