--- a/js/MusicPlayer/birthdayplayer.html
+++ b/js/MusicPlayer/birthdayplayer.html
@@ -30,6 +30,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Happy Birthday</a> 
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="gameplayer.html">Note Guesser Game</a>
+        </li>
       </ul>
     </div>
   </nav>
