Note guesser game working, fixed bugs on songs.

--- a/js/MusicPlayer/gameplayer.html
+++ b/js/MusicPlayer/gameplayer.html
@@ -37,12 +37,21 @@
   <div class='player'>
     <h2>Note Guesser</h2> 
     <div class='details'>
+        <div><h4 id="answer" class="answerHeader">Correct</h4></div>
         <div id="container">
             <div id="output"></div>
         </div>
         <div id="controls">
-            <button id='add-note' type="button" class="btn btn-secondary">Add Note</button>
-            <button id='right-answer' type="button" class="btn btn-secondary">Right Answer</button>
+            <button id='add-note' type="button" class="btn btn-secondary">Play</button>
+        </div>
+        <div>
+          <button id='a-button' type="button" class="btn btn-secondary">A</button>
+          <button id='b-button' type="button" class="btn btn-secondary">B</button>
+          <button id='c-button' type="button" class="btn btn-secondary">C</button>
+          <button id='d-button' type="button" class="btn btn-secondary">D</button>
+          <button id='e-button' type="button" class="btn btn-secondary">E</button>
+          <button id='f-button' type="button" class="btn btn-secondary">F</button>
+          <button id='g-button' type="button" class="btn btn-secondary">G</button>
         </div>
     </div>
   </div>
