Replace use of module system with IIFE based namespacing

--- a/js/PianoRollLib/introduction.html
+++ b/js/PianoRollLib/introduction.html
@@ -119,5 +119,8 @@
     </p>
 
 </body>
-<script type="module" src="introduction.js"></script>
+<script src="pianoRoll.js"></script>
+<script src="beatGame.js"></script>
+<script src="instrument.js"></script>
+<script src="introduction.js"></script>
 </html>
