--- a/js/MusicPlayer/birthdayplayer.html
+++ b/js/MusicPlayer/birthdayplayer.html
@@ -25,10 +25,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="twinkleplayer.html">Twinkle Twinkle Little Star <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="twinkleplayer.html">Twinkle Twinkle Little Star</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Happy Birthday</a> 
+          <a class="nav-link" href="#">Happy Birthday <span class="sr-only">(current)</span></a> 
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="fureliseplayer.html">Fur Elise</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="preludeplayer.html">Prelude in C Major</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="gameplayer.html">Note Guesser Game</a>
