--- a/js/MusicPlayer/twinkleplayer.html
+++ b/js/MusicPlayer/twinkleplayer.html
@@ -32,6 +32,12 @@
           <a class="nav-link" href="birthdayplayer.html">Happy Birthday</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="fureliseplayer.html">Fur Elise</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="preludeplayer.html">Prelude in C Major</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="gameplayer.html">Note Guesser Game</a>
         </li>
       </ul>
