refactored no modules, commented on pianoRoll lib

--- a/js/PianoRollLib/contourTest.html
+++ b/js/PianoRollLib/contourTest.html
@@ -21,6 +21,8 @@
 
     </div>
 </body>
-<script type="module" src="contourTest.js"></script>
-<script type="module" src="../musanim.js"></script>
+<script src="pianoRoll.js"></script>
+<script src="instrument.js"></script>
+<script src="contourGame.js"></script>
+<script src="contourTest.js"></script>
 </html>
