added song, assessment measures, documentation.

--- a/js/MusicPlayer/gameplayer.html
+++ b/js/MusicPlayer/gameplayer.html
@@ -30,6 +30,12 @@
         <li class="nav-item">
           <a class="nav-link" href="birthdayplayer.html">Happy Birthday</a> 
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="fureliseplayer.html">Fur Elise</a> 
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="graceplayer.html">Amazing Grace</a> 
+        </li>
       </ul>
     </div>
   </nav>
