--- a/js/MusicPlayer/twinkleplayer.html
+++ b/js/MusicPlayer/twinkleplayer.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="fureliseplayer.html">Fur Elise</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="preludeplayer.html">Prelude in C Major</a>
+          <a class="nav-link" href="graceplayer.html">Amazing Grace</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="gameplayer.html">Note Guesser Game</a>
